--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,16 @@
   <head>
     <title>Accueil</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   </head>
   <body>
     <h1>Accueil</h1>
     <p>Welcome to Accueil</p>
     <a href="/inscription">Inscription</a>
+    <% if (alert) { %>
+      <div class="alert alert-<%= alert.type %>" role="alert">
+          <%= alert.text %>
+      </div>
+    <% } %>
   </body>
 </html>
