--- a/views/inscription.ejs
+++ b/views/inscription.ejs
@@ -3,6 +3,7 @@
   <head>
     <title>Inscription</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   </head>
   <body>
     <h1>Inscription</h1>
@@ -16,8 +17,10 @@
       <input type="password" name="VerifyPassword" placeholder="Vérification mot de passe" required>
       <input type="submit"> 
     </form>
-    <% if(locals.error) { %>
-      <%= locals.error %>
+    <% if (locals.alert) { %>
+      <div class="alert alert-<%= locals.alert.type %>" role="alert">
+          <%= locals.alert.text %>
+      </div>
     <% } %>
   </body>
 </html>
