--- a/views/admin/troupe.ejs
+++ b/views/admin/troupe.ejs
@@ -26,7 +26,7 @@
         </a>
       <% }) %>
     <% } %>
-    <a href="/admin">
+    <a href="/admin/demande">
         <button type="button">
             Demande
         </button>
