--- a/views/chef/patrouille.ejs
+++ b/views/chef/patrouille.ejs
@@ -26,5 +26,9 @@
           </a>
         <% }) %>
       <% } %>
+      <form method="POST" action="/chef/patrouille">
+        <input type="text" name="NomPatrouille" placeholder="Nom de la patrouille" required>
+        <input type="submit"> 
+      </form>
   </body>
 </html>
