--- a/views/demande.ejs
+++ b/views/demande.ejs
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   </head>
   <body>
+    <a href="/newuser/deconnexion">
+      <button class="btn btn-danger" type="button">
+          Deconnexion
+      </button>
+    </a>
     <h1>Demande</h1>
     <p>Welcome to demande</p>
     <form method="POST" action="/newuser">
