gestion compte chef

--- a/views/chef/patrouille.ejs
+++ b/views/chef/patrouille.ejs
@@ -45,5 +45,10 @@
             Evenement
         </button>
       </a>
+      <a href="/chef/compte">
+        <button class="btn btn-danger" type="button">
+            Compte
+        </button>
+      </a>
   </body>
 </html>
