--- a/views/scout/evenement.ejs
+++ b/views/scout/evenement.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Evenements</title>
+    <title>Evenement</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
   </head>
@@ -11,8 +11,8 @@
           Deconnexion
       </button>
     </a>
-    <h1>Evenements</h1>
-    <p>Welcome to Evenements</p>
+    <h1>Evenement</h1>
+    <p>Welcome to Evenement</p>
     <% if (locals.alert) { %>
         <div class="alert alert-<%= locals.alert.type %>" role="alert">
             <%= locals.alert.text %>
@@ -25,29 +25,11 @@
         <% results.forEach(element => { %>
           <%= element.DateEvenement %>
           <%= element.NomType_E %>
-          <a href="/chef/evenement/delete/<%= element.IdEvenement %>">
-            <button class="btn btn-danger" type="button">
-                Supprimer
-            </button>
-          </a>
         <% }) %>
       <% } %>
-      <form method="POST" action="/chef/evenement">
-        <input type="datetime-local" name="DateEvenement" placeholder="Date et heure" required>
-        <select name="IdType_E">
-            <option value="1">Weekend Patrouille</option>
-            <option value="2">Weekend Troupe</option>
-            <option value="3">Weekend HP</option>
-            <option value="4">Sortie Patrouille</option>
-            <option value="5">Sortie Troupe</option>
-            <option value="6">Sortie HP</option>
-            <option value="7">District</option>
-        </select>
-        <input type="submit"> 
-      </form>
-      <a href="/chef/patrouille">
+      <a href="/scout/patrouille">
         <button class="btn btn-danger" type="button">
-            Patrouille
+            Retour
         </button>
       </a>
   </body>
