--- a/views/scout/compte.ejs
+++ b/views/scout/compte.ejs
@@ -28,6 +28,11 @@
             <input type="submit"> 
         </form>
       <% } %>
+      <a href="/scout/quitter">
+        <button class="btn btn-danger" type="button">
+            Quitter patrouille
+        </button>
+      </a>
       <a href="/scout/suppression">
         <button class="btn btn-danger" type="button">
             Supprimer compte
