--- a/views/newuser/demande.ejs
+++ b/views/newuser/demande.ejs
@@ -21,6 +21,11 @@
         <div class="alert alert-<%= locals.alert.type %>" role="alert">
             <%= locals.alert.text %>
         </div>
-      <% } %>
+    <% } %>
+    <a href="/newuser/compte">
+      <button class="btn btn-danger" type="button">
+          Compte
+      </button>
+    </a>
   </body>
 </html>
