ajout clear user

--- a/views/admin/demande.ejs
+++ b/views/admin/demande.ejs
@@ -11,6 +11,11 @@
           Deconnexion
       </button>
     </a>
+    <a href="/admin/clear">
+      <button class="btn btn-danger" type="button">
+         Netoyer la bdd
+      </button>
+    </a>
     <h1>Demande</h1>
     <p>Welcome to Demande</p>
     <% if (locals.alert) { %>
