--- a/views/admin/demande.ejs
+++ b/views/admin/demande.ejs
@@ -11,11 +11,11 @@
           Deconnexion
       </button>
     </a>
-    <a href="/admin/clear">
-      <button class="btn btn-danger" type="button">
+    <form method="POST" action="/admin/clear?_method=DELETE">
+      <button class="btn btn-danger" type="input">
          Netoyer la bdd
       </button>
-    </a>
+    </form>
     <h1>Demande</h1>
     <p>Welcome to Demande</p>
     <% if (locals.alert) { %>
@@ -30,16 +30,16 @@
       <% results.forEach(element => { %>
         <%= element.NomTroupe %>
         <%= element.NumCarte %>
-        <a href="/admin/demande/accept/<%= element.NumCarte %>">
-          <button class="btn btn-success" type="button">
+        <form method="POST" action="/admin/demande/accept/<%= element.NumCarte %>">
+          <button class="btn btn-success" type="input">
               Accepter
           </button>
-        </a>
-        <a href="/admin/demande/delete/<%= element.NumCarte %>">
-          <button class="btn btn-danger" type="button">
+        </form>
+        <form method="POST" action="/admin/demande/delete/<%= element.NumCarte %>?_method=DELETE">
+          <button class="btn btn-danger" type="input">
               Supprimer
           </button>
-        </a>
+        </form>
       <% }) %>
     <% } %>
     <a href="/admin/troupe">
