--- a/views/chef/compte.ejs
+++ b/views/chef/compte.ejs
@@ -19,7 +19,7 @@
         </div>
       <% } %>
       <% if (locals.results) { %>
-        <form method="POST" action="/chef/compte">
+        <form method="POST" action="/chef/compte?_method=PUT">
             <input type="text" name="LastName" placeholder="Nom" value="<%= locals.results[0].Nom %>" required>
             <input type="text" name="FirstName" placeholder="Prénom" value="<%= locals.results[0].Prenom %>" required>
             <input type="date" name="BirthDate" placeholder="Date de naissance" value="<%= locals.results[0].DateNaissance %>" required>
@@ -28,10 +28,10 @@
             <input type="submit"> 
         </form>
       <% } %>
-      <form method="POST" action="/chef/successeur">
+      <form method="POST" action="/chef/successeur?_method=DELETE">
         <input type="text" name="NumCarte" placeholder="Numéro de carte" required> 
         <input type="submit" value="Successeur"> 
-    </form>
+      </form>
       <a href="/chef/patrouille">
         <button class="btn btn-danger" type="button">
             Retour
