--- a/views/admin/troupe.ejs
+++ b/views/admin/troupe.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Troupe</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/admin/deconnexion">
-      <button class="btn btn-danger" type="button">
-          Deconnexion
-      </button>
-    </a>
+<%- include('../navbarAdmin') %>
+
+  <main>
     <h1>Troupe</h1>
     <p>Welcome to Troupe</p>
     <% if (locals.alert) { %>
@@ -31,10 +21,6 @@
         </form>
       <% }) %>
     <% } %>
-    <a href="/admin/demande">
-        <button type="button">
-            Demande
-        </button>
-      </a>
+  </main>
   </body>
 </html>
