--- a/views/inscription.ejs
+++ b/views/inscription.ejs
@@ -15,8 +15,9 @@
             <input class="form-control champform" type="text" name="LastName" placeholder="Nom" required>
             <input class="form-control champform" type="text" name="FirstName" placeholder="Prénom" required>
             <input class="form-control champform" type="date" name="BirthDate" placeholder="Date de naissance" required>
+            </p>Un mot de passe valide contient: <br><br>- Une majuscule<br>- Une minuscule<br>- Un chiffre<br>- Un caractère spécial (-+!*@_)<br>- Entre 8 et 15 caractères</p>
             <input class="form-control champform" type="password" name="Password" placeholder="Mot de passe" required>
-            <input class="form-control champformlast" type="password" name="VerifyPassword" placeholder="Vérification mot de passe" required>
+            <input class="form-control champformlast" type="password" name="VerifyPassword" placeholder="Vérification mot de passe" onclick="test" required>
             <button class="btn btn-primary boutonform" type="submit">S'inscrire</button>
             <a class="lienform" href="/">Déjà inscrit ?</a>
         </form>
