--- a/views/scout/materiel.ejs
+++ b/views/scout/materiel.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Materiel</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/scout/deconnexion">
-      <button class="btn btn-danger" type="button">
-          Deconnexion
-      </button>
-    </a>
+<%- include('../navbarScout') %>
+
+  <main>
     <h1>Materiel</h1>
     <p>Welcome to Materiel</p>
     <% if (locals.alert) { %>
@@ -38,10 +28,6 @@
           </form>
         <% }) %>
       <% } %>
-      <a href="/scout/patrouille">
-        <button class="btn btn-danger" type="button">
-            Retour
-        </button>
-      </a>
+  </main>
   </body>
 </html>
