--- a/views/scout/patrouille.ejs
+++ b/views/scout/patrouille.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Patrouille</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/scout/deconnexion">
-      <button class="btn btn-danger" type="button">
-          Deconnexion
-      </button>
-    </a>
+<%- include('../navbarScout') %>
+
+  <main>
     <h1>Patrouille</h1>
     <p>Welcome to Patrouille</p>
     <% if (locals.alert) { %>
@@ -28,20 +18,6 @@
           <%= element.DateNaissance %>
         <% }) %>
       <% } %>
-      <a href="/scout/evenement">
-        <button class="btn btn-danger" type="button">
-            Evenement
-        </button>
-      </a>
-      <a href="/scout/materiel">
-        <button class="btn btn-danger" type="button">
-            Materiel
-        </button>
-      </a>
-      <a href="/scout/compte">
-        <button class="btn btn-danger" type="button">
-            Compte
-        </button>
-      </a>
+  </main>
   </body>
 </html>
