--- a/views/chef/compte.ejs
+++ b/views/chef/compte.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Compte</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/chef/deconnexion">
-      <button class="btn btn-danger" type="button">
-            Deconnexion
-      </button>
-    </a>
+<%- include('../navbarChef') %>
+
+  <main>
     <h1>Compte</h1>
     <p>Welcome to Compte</p>
     <% if (locals.alert) { %>
@@ -32,10 +22,6 @@
         <input type="text" name="NumCarte" placeholder="Numéro de carte" required> 
         <input type="submit" value="Successeur"> 
       </form>
-      <a href="/chef/patrouille">
-        <button class="btn btn-danger" type="button">
-            Retour
-        </button>
-      </a>
+  </main>
   </body>
 </html>
