--- a/views/chef/evenement.ejs
+++ b/views/chef/evenement.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Evenements</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/chef/deconnexion">
-      <button class="btn btn-danger" type="button">
-          Deconnexion
-      </button>
-    </a>
+<%- include('../navbarChef') %>
+
+  <main>
     <h1>Evenements</h1>
     <p>Welcome to Evenements</p>
     <% if (locals.alert) { %>
@@ -45,10 +35,6 @@
         </select>
         <input type="submit"> 
       </form>
-      <a href="/chef/patrouille">
-        <button class="btn btn-danger" type="button">
-            Patrouille
-        </button>
-      </a>
+  </main>
   </body>
 </html>
