--- a/views/chef/patrouille.ejs
+++ b/views/chef/patrouille.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Patrouille</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/chef/deconnexion">
-      <button class="btn btn-danger" type="button">
-          Deconnexion
-      </button>
-    </a>
+<%- include('../navbarChef') %>
+
+  <main>
     <h1>Patrouille</h1>
     <p>Welcome to Patrouille</p>
     <% if (locals.alert) { %>
@@ -40,15 +30,6 @@
         <input type="text" name="NomPatrouille" placeholder="Nom de la patrouille" required>
         <input type="submit"> 
       </form>
-      <a href="/chef/evenement">
-        <button class="btn btn-danger" type="button">
-            Evenement
-        </button>
-      </a>
-      <a href="/chef/compte">
-        <button class="btn btn-danger" type="button">
-            Compte
-        </button>
-      </a>
+  </main>
   </body>
 </html>
