--- a/views/newuser/compte.ejs
+++ b/views/newuser/compte.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Compte</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/newuser/deconnexion">
-      <button class="btn btn-danger" type="button">
-            Deconnexion
-      </button>
-    </a>
+<%- include('../navbarNewUser') %>
+
+  <main>
     <h1>Compte</h1>
     <p>Welcome to Compte</p>
     <% if (locals.alert) { %>
@@ -33,10 +23,6 @@
             Supprimer compte
         </button>
       </form>
-      <a href="/newuser/demande">
-        <button class="btn btn-danger" type="button">
-            Retour
-        </button>
-      </a>
+  </main>
   </body>
 </html>
