--- a/views/newuser/demande.ejs
+++ b/views/newuser/demande.ejs
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Demande</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
-  </head>
-  <body>
-    <a href="/newuser/deconnexion">
-      <button class="btn btn-danger" type="button">
-          Deconnexion
-      </button>
-    </a>
+<%- include('../navbarNewUser') %>
+
+    <main>
     <h1>Demande</h1>
     <p>Welcome to demande</p>
     <form method="POST" action="/newuser">
@@ -22,10 +12,6 @@
             <%= locals.alert.text %>
         </div>
     <% } %>
-    <a href="/newuser/compte">
-      <button class="btn btn-danger" type="button">
-          Compte
-      </button>
-    </a>
+    </main>
   </body>
 </html>
