--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -18,6 +18,7 @@ body {
 .h1, h1 {
     font-size: 80px;
     font-family: 'Amatic SC', cursive;
+    color: rgb(255,255,255);
     margin-bottom: 0px;
 }
 
