--- a/views/newuser/demande.ejs
+++ b/views/newuser/demande.ejs
@@ -3,7 +3,7 @@
     <main>
     <h1>Demande</h1>
     <p>Welcome to demande</p>
-    <form method="POST" action="/newuser">
+    <form method="POST" action="/newuser/demande">
         <input type="text" name="NomTroupe" placeholder="Nom de l'unité"  required>
         <input type="submit"> 
     </form>
