--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,11 @@
                 <i class="icon ion-locked"></i>
             </div>
             <% if (alert) { %>
-                <div class="alert alert-<%= alert.type %>" role="alert">
+                <div class="alert alert-<%= alert.type %> alert-dismissible fade show" role="alert">
                     <%= alert.text %>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
                 </div>
             <% } %>
             <input class="form-control champform" type="text" name="NumCard" placeholder="Numéro de carte" required>
